fix card actions gap

--- a/packages/scss/src/components/card/component.scss
+++ b/packages/scss/src/components/card/component.scss
@@ -41,6 +41,8 @@
 
 		.card-footer-right {
 			margin-left: auto;
+			display: inline-flex;
+			gap: var(--pr-t-spacings-200);
 		}
 	}
 }
